# cross-platform-llm-client

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
lib/: main.dart
lib/controllers/: chat_controller.dart  model_controller.dart  settings_controller.dart
lib/core/: constants.dart
lib/ffi/: sd_ffi_bindings.dart
lib/services/: image_generation_notification_service.dart  inference_android.dart  inference_service.dart  local_image_service.dart  sd_isolate_processor.dart
lib/views/: chat_view.dart  home_view.dart  log_view.dart  model_view.dart  settings_view.dart
lib/widgets/: chat_bubble.dart
local_plugins/sd_flutter_android/android/: CMakeLists.txt
local_plugins/sd_flutter_android/android/src/main/cpp/: sd_jni_wrapper.cpp
local_plugins/sd_flutter_android/android/src/main/kotlin/com/example/sd_flutter_android/: SdFlutterAndroidPlugin.kt
local_plugins/sd_flutter_android/lib/: sd_flutter_android.dart
